--- a/OnlineTutor2/Views/Admin/Users.cshtml
+++ b/OnlineTutor2/Views/Admin/Users.cshtml
@@ -11,6 +11,23 @@
         <p class="text-muted">Всего пользователей: <strong>@Model.Count</strong></p>
     </div>
     <div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
+                <i class="fas fa-file-export"></i> Экспорт
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" asp-action="ExportUsers" asp-route-format="excel">
+                        <i class="fas fa-file-excel text-success"></i> Excel
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-action="ExportUsers" asp-route-format="csv">
+                        <i class="fas fa-file-csv text-success"></i> CSV
+                    </a>
+                </li>
+            </ul>
+        </div>
         <a asp-action="Index" class="btn btn-outline-secondary">
             <i class="fas fa-arrow-left"></i> К дашборду
         </a>
