--- a/OnlineTutor2/Views/Admin/TestResults.cshtml
+++ b/OnlineTutor2/Views/Admin/TestResults.cshtml
@@ -18,6 +18,23 @@
         <button type="button" class="btn btn-danger" onclick="confirmClearAllResults()">
             <i class="fas fa-trash-alt"></i> Очистить все результаты
         </button>
+        <div class="btn-group">
+            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown">
+                <i class="fas fa-file-export"></i> Экспорт
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" asp-action="ExportTestResults" asp-route-format="excel">
+                        <i class="fas fa-file-excel text-success"></i> Excel
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-action="ExportTestResults" asp-route-format="csv">
+                        <i class="fas fa-file-csv text-success"></i> CSV
+                    </a>
+                </li>
+            </ul>
+        </div>
         <a asp-action="Index" class="btn btn-outline-secondary">
             <i class="fas fa-arrow-left"></i> К дашборду
         </a>
