--- a/OnlineTutor2/Views/Admin/Index.cshtml
+++ b/OnlineTutor2/Views/Admin/Index.cshtml
@@ -159,6 +159,11 @@
                         </a>
                     </div>
                     <div class="col-md-3 mb-2">
+                        <a asp-action="Export" class="btn btn-outline-primary w-100">
+                            <i class="fas fa-file-export"></i> Экспорт данных
+                        </a>
+                    </div>
+                    <div class="col-md-3 mb-2">
                         <a asp-action="SystemInfo" class="btn btn-outline-primary w-100">
                             <i class="fas fa-server"></i> Системная информация
                         </a>
