fix admin systeminfo

--- a/OnlineTutor2/Views/Admin/SystemInfo.cshtml
+++ b/OnlineTutor2/Views/Admin/SystemInfo.cshtml
@@ -69,6 +69,10 @@
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingTests</strong></td>
                     </tr>
                     <tr>
+                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationTests</strong></td>
+                    </tr>
+                    <tr>
                         <td><i class="fas fa-list-ul text-success"></i> Классические</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalRegularTests</strong></td>
                     </tr>
@@ -94,6 +98,10 @@
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingQuestions</strong></td>
                     </tr>
                     <tr>
+                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationQuestions</strong></td>
+                    </tr>
+                    <tr>
                         <td><i class="fas fa-list-ul text-success"></i> Классические</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalRegularQuestions</strong></td>
                     </tr>
@@ -117,6 +125,10 @@
                     <tr>
                         <td><i class="fas fa-spell-check text-primary"></i> Орфография</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingResults</strong></td>
+                    </tr>
+                    <tr>
+                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationResults</strong></td>
                     </tr>
                     <tr>
                         <td><i class="fas fa-list-ul text-success"></i> Классические</td>
