admin view fixes

--- a/OnlineTutor2/Views/Admin/Export.cshtml
+++ b/OnlineTutor2/Views/Admin/Export.cshtml
@@ -93,7 +93,7 @@
         <div class="card h-100">
             <div class="card-header bg-info text-white">
                 <h5 class="mb-0">
-                    <i class="fas fa-user-graduate"></i> Студенты
+                    <i class="fas fa-user-graduate"></i> Ученики
                 </h5>
             </div>
             <div class="card-body">
