--- a/OnlineTutor2/Views/Admin/SystemInfo.cshtml
+++ b/OnlineTutor2/Views/Admin/SystemInfo.cshtml
@@ -69,7 +69,7 @@
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingTests</strong></td>
                     </tr>
                     <tr>
-                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td><i class="fas fa-quote-right text-primary"></i> Пунктуация</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationTests</strong></td>
                     </tr>
                     <tr>
@@ -98,7 +98,7 @@
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingQuestions</strong></td>
                     </tr>
                     <tr>
-                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td><i class="fas fa-quote-right text-primary"></i> Пунктуация</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationQuestions</strong></td>
                     </tr>
                     <tr>
@@ -127,7 +127,7 @@
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalSpellingResults</strong></td>
                     </tr>
                     <tr>
-                        <td><i class="fas fa-spell-check text-primary"></i> Пунктуация</td>
+                        <td><i class="fas fa-quote-right text-primary"></i> Пунктуация</td>
                         <td class="text-end"><strong>@Model.DatabaseInfo.TotalPunctuationResults</strong></td>
                     </tr>
                     <tr>
