--- a/OnlineTutor2/Views/Admin/Users.cshtml
+++ b/OnlineTutor2/Views/Admin/Users.cshtml
@@ -226,6 +226,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+}
+
 @section Styles {
     <style>
         .table th {
