--- a/OnlineTutor2/Views/Admin/Tests.cshtml
+++ b/OnlineTutor2/Views/Admin/Tests.cshtml
@@ -200,6 +200,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         function filterTests(type) {
             const rows = document.querySelectorAll('.test-row');
