--- a/OnlineTutor2/Views/Admin/Teachers.cshtml
+++ b/OnlineTutor2/Views/Admin/Teachers.cshtml
@@ -206,6 +206,8 @@
 }
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         function filterTeachers(status) {
             const cards = document.querySelectorAll('.teacher-card');
