--- a/OnlineTutor2/Views/Admin/Classes.cshtml
+++ b/OnlineTutor2/Views/Admin/Classes.cshtml
@@ -198,6 +198,10 @@
     </div>
 }
 
+@section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+}
+
 @section Styles {
     <style>
         .card {
