--- a/OnlineTutor2/Views/Admin/TestResults.cshtml
+++ b/OnlineTutor2/Views/Admin/TestResults.cshtml
@@ -314,6 +314,8 @@
 </div>
 
 @section Scripts {
+    <script src="~/js/layout.js" asp-append-version="true"></script>
+
     <script>
         function applyFilters() {
             const typeFilter = document.getElementById('typeFilter').value;
