--- a/OnlineTutor2/Views/Test/Index.cshtml
+++ b/OnlineTutor2/Views/Test/Index.cshtml
@@ -29,12 +29,23 @@ else
                 case 1:
                     testsCount = category.SpellingTests?.Count ?? 0;
                     break;
-                case 5:
+                case 2:
                     testsCount = category.PunctuationTests?.Count ?? 0;
                     break;
-                case 6:
+                case 3:
                     testsCount = category.OrthoeopyTests?.Count ?? 0;
                     break;
+                case 4:
+                    testsCount = category.RegularTests?.Count ?? 0;
+                    break;
+                //Свободные ответы
+                @* case 5:
+                    testsCount = category.RegularTests?.Count ?? 0;
+                    break; *@
+                //Средства выразительсности
+                @* case 6:
+                    testsCount = category.RegularTests?.Count ?? 0;
+                    break; *@
             }
 
             <div class="col-md-6 col-lg-4 mb-4">
@@ -45,14 +56,28 @@ else
                             {
                                 <i class="fas fa-spell-check text-primary" style="font-size: 3rem;"></i>
                             }
-                            else if (category.Id == 5)
+                            else if (category.Id == 2)
                             {
-                                <i class="fas fa-exclamation text-warning" style="font-size: 3rem;"></i>
+                                <i class="fas fa-quote-right text-warning" style="font-size: 3rem;"></i>
                             }
-                            else if (category.Id == 6)
+                            else if (category.Id == 3)
                             {
                                 <i class="fas fa-volume-up text-success" style="font-size: 3rem;"></i>
                             }
+                            else if (category.Id == 4)
+                            {
+                                <i class="fas fa-list-ul text-success" style="font-size: 3rem;"></i>
+                            }
+                            //свободные ответы
+                            @* else if (category.Id == 5)
+                            {
+                                <i class="fas fa-volume-up text-success" style="font-size: 3rem;"></i>
+                            } *@
+                            //средства выразительности
+                            @* else if (category.Id == 6)
+                            {
+                                <i class="fas fa-volume-up text-success" style="font-size: 3rem;"></i>
+                            } *@
                             else
                             {
                                 <i class="fas fa-tasks text-info" style="font-size: 3rem;"></i>
