--- a/OnlineTutor2/Views/SpellingTest/EditQuestion.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/EditQuestion.cshtml
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-primary text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-edit"></i> Редактирование вопроса
+                    <i class="fas fa-edit"></i> Редактирование вопроса по правописанию
                 </h4>
             </div>
             <div class="card-body">
