--- a/OnlineTutor2/Views/PunctuationTest/Details.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Details.cshtml
@@ -8,7 +8,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-controller="Test" asp-action="Category" asp-route-id="5">Тесты на пунктуацию</a>
+                    <a asp-controller="Test" asp-action="Category" asp-route-id="5">Тесты по пунктуации</a>
                 </li>
                 <li class="breadcrumb-item active">@Model.Title</li>
             </ol>
