--- a/OnlineTutor2/Views/PunctuationTest/Edit.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Edit.cshtml
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-primary text-white">
                 <h4 class="mb-0">
-                    <i class="fas fa-edit"></i> Редактирование теста на орфографию
+                    <i class="fas fa-edit"></i> Редактирование теста по пунктуации
                 </h4>
             </div>
             <div class="card-body">
@@ -64,14 +64,14 @@
                                 <label asp-for="TimeLimit" class="form-label">
                                     <i class="fas fa-clock"></i> Время на выполнение (минут)
                                 </label>
-                                <input asp-for="TimeLimit" class="form-control" type="number" min="5" max="180" />
+                                <input asp-for="TimeLimit" class="form-control" type="number" min="5" max="300" />
                                 <span asp-validation-for="TimeLimit" class="text-danger"></span>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <label asp-for="MaxAttempts" class="form-label">
                                     <i class="fas fa-redo"></i> Количество попыток
                                 </label>
-                                <input asp-for="MaxAttempts" class="form-control" type="number" min="1" max="10" />
+                                <input asp-for="MaxAttempts" class="form-control" type="number" min="1" max="100" />
                                 <span asp-validation-for="MaxAttempts" class="text-danger"></span>
                             </div>
                         </div>
