--- a/OnlineTutor2/Views/PunctuationTest/EditQuestion.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/EditQuestion.cshtml
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-warning text-dark">
                 <h4 class="mb-0">
-                    <i class="fas fa-edit"></i> Редактирование вопроса на пунктуацию
+                    <i class="fas fa-edit"></i> Редактирование вопроса по пунктуации
                 </h4>
             </div>
             <div class="card-body">
