--- a/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
@@ -9,7 +9,7 @@
         <div class="card shadow">
             <div class="card-header bg-warning text-dark">
                 <h4 class="mb-0">
-                    <i class="fas fa-file-import"></i> Импорт вопросов на пунктуацию
+                    <i class="fas fa-file-import"></i> Импорт вопросов по пунктуации
                 </h4>
             </div>
             <div class="card-body">
