--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -8,7 +8,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-controller="Test" asp-action="Category" asp-route-id="1">Тесты на орфографию</a>
+                    <a asp-controller="Test" asp-action="Category" asp-route-id="1">Тесты по орфографии</a>
                 </li>
                 <li class="breadcrumb-item active">@Model.Title</li>
             </ol>
