--- a/OnlineTutor2/Views/Student/Index.cshtml
+++ b/OnlineTutor2/Views/Student/Index.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="card-body d-flex flex-column">
                 <p class="card-text">Изучайте учебные материалы и дополнительные ресурсы</p>
-                <a href="#" class="btn btn-success mt-auto w-100">
+                <a asp-controller="Material" asp-action="Index" class="btn btn-info mt-auto w-100">
                     <i class="fas fa-book-open"></i> Учебные материалы
                 </a>
             </div>
