--- a/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/ImportQuestions.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OnlineTutor2.ViewModels.PunctuationQuestionImportViewModel
 @{
-    ViewData["Title"] = "Импорт вопросов на пунктуацию";
+    ViewData["Title"] = "Импорт вопросов по пунктуации";
     var test = ViewBag.Test as OnlineTutor2.Models.PunctuationTest;
 }
 
