--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom navbar-fixed">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold text-primary" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="fas fa-graduation-cap"></i> Образовательная платформа
+                    <i class="fas fa-graduation-cap"></i> Тьюторная
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -194,7 +194,7 @@
             <div class="row d-none d-md-flex">
 
                 <div class="col-md-4 footer-column">
-                    <h6><i class="fas fa-graduation-cap text-primary"></i> Образовательная платформа</h6>
+                    <h6><i class="fas fa-graduation-cap text-primary"></i> Тьюторная</h6>
                     <p>&copy; 2025 - Система онлайн-обучения</p>
                     <p>Эффективная подготовка к ЕГЭ по русскому языку</p>
                     <p>
