--- a/OnlineTutor2/Views/StudentTest/History.cshtml
+++ b/OnlineTutor2/Views/StudentTest/History.cshtml
@@ -137,7 +137,7 @@ else
                                             <strong>@result.SpellingTest.Title</strong>
                                             <br>
                                             <small class="text-muted">
-                                                @result.SpellingTest.SpellingQuestions.Count вопросов
+                                                Вопросов: @result.SpellingTest.SpellingQuestions.Count
                                             </small>
                                         </div>
                                     </td>
@@ -217,7 +217,7 @@ else
                                             <strong>@result.PunctuationTest.Title</strong>
                                             <br>
                                             <small class="text-muted">
-                                                @result.PunctuationTest.PunctuationQuestions.Count вопросов
+                                                Вопросов: @result.PunctuationTest.PunctuationQuestions.Count
                                             </small>
                                         </div>
                                     </td>
@@ -297,7 +297,7 @@ else
                                             <strong>@result.OrthoeopyTest.Title</strong>
                                             <br>
                                             <small class="text-muted">
-                                                @result.OrthoeopyTest.OrthoeopyQuestions.Count вопросов
+                                                Вопросов: @result.OrthoeopyTest.OrthoeopyQuestions.Count
                                             </small>
                                         </div>
                                     </td>
