--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
                                                 <i class="fas fa-tasks"></i> Тесты
                                             </a>
                                         </li>
+                                        <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a class="dropdown-item" asp-controller="Material" asp-action="Index">
                                                 <i class="fas fa-book"></i> Материалы
@@ -94,7 +95,7 @@
                                     <ul class="dropdown-menu">
                                         <li>
                                             <a class="dropdown-item" asp-controller="StudentTest" asp-action="Index">
-                                                <i class="fas fa-clipboard-list"></i> Мои тесты
+                                                <i class="fas fa-book-reader"></i> Мои тесты
                                             </a>
                                         </li>
                                         <li>
@@ -108,6 +109,7 @@
                                                 <i class="fas fa-book"></i> Материалы
                                             </a>
                                         </li>
+                                        <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <a class="dropdown-item" href="#">
                                                 <i class="fas fa-calendar-alt"></i> Расписание
